# Ocean-Waste-Tracker

./: .env  .gitignore  Dockerfile  INSTALL.md  README.md  app.py  detect.py  forms.py  install.bat  install.sh  models.py  pyproject.toml  replit.nix  report_generator.py  requirements.txt  routes.py  run_application.bat  water_trash_detection.db
attached_assets/: Pasted--base-PS-C-Users-asus-Downloads-OceanWasteTracker-1-OceanWasteTracker-python-c-from-app-impor-1743351691666.txt  Pasted--base-PS-C-Users-asus-Downloads-OceanWasteTracker-1-OceanWasteTracker-python-main-py-Loading-t-1743351497039.txt  Pasted--base-PS-C-Users-asus-Downloads-OceanWasteTracker-1-OceanWasteTracker-venv-Scripts-activate--1743333023883.txt
instance/: water_trash_detection.db
migrations/versions/: 37530ac4cc06_add_bounding_box_columns_to_.py
static/css/: style.css
static/js/: detect.js  livestream.js  main.js  upload.js
templates/: about.html  base.html  contact.html  home.html  livestream.html  login.html  reports.html  signup.html  upload.html
